# ai-coding-assistant

./: .env.example  .envrc  .gitignore  .gitignore_0  CHANGELOG.md  Dockerfile  Makefile  PACKAGE_CONTENTS.md  README.md  SPECIFICATION.md  agent_network.py  config.py  docker-compose.yml  flake.nix  main.py  mcp-servers.json  nixos-example-config.nix  pyproject.toml  requirements.txt  setup.py
agent-server/: main.py  mcp_manager.py  orchestrator.py
ai-agent-runtime/: __init__.py  orchestrator.py  server.py
ai-agent-runtime/agents/: base.py  code_expert.py
ai-agent-runtime/ai_agent_runtime/: __main__.py  context.py  middleware.py  orchestrator.py  server.py
ai-agent-runtime/ai_agent_runtime/agents/: base.py  code_expert.py  knowledge_scout.py  supervisor.py
ai-agent-runtime/ai_agent_runtime/mcp/: __init__.py  registry.py
ai-agent-runtime/ai_agent_runtime/utils/: logger.py
ai-agent-runtime/scripts/: agent.sh  ai.sh
backend/: PROJECT_STRUCTURE.md  __init__.py  main.py  models.py
backend/api/routes/: workflow_routes.py
backend/config/: backend_config_logging_config.py  backend_config_settings.py
backend/services/: backend_services___init__.py  backend_services_ollama_manager.py  backend_services_qdrant_manager.py
docs/: architecture.md  implementation.md  testing.md
documentation/: BACKEND_COMPLETE_GUIDE.md  BACKEND_SETUP_GUIDE.md  BACKEND_SKELETON_SUMMARY.md  DOCUMENTATION_MANIFEST.md  FLOW_DIAGRAMS_DETAILED.md
flowise-config/: lib.nix
flowise-config/agents/: code-expert.nix  code-export-worker.json  knowledge-scout-worker.json  knowledge-scout.nix  supervisor-router.json  supervisor.nix
flowise-config/flows/: main-workflow.nix
home-manager-module/: default.nix
legacy/: TODO.md  pyproject.toml
legacy/ai-agent-runtime/ai_agent_runtime/: __main__.py
legacy/ai-agent-runtime/ai_agent_runtime/agents/: __init__.py  supervisor.py
legacy/ai-agent-runtime/scripts/: agent.sh
legacy/planning/: FLOW_DIAGRAMS.md  IMPROVED_SPEC.md
modules/: nixos-agent-network.nix
planning/: SPECIFICATION.md
scripts/: ai.sh
tests/: test_agent_network.py
