# pyproject.toml - Poetry Configuration with LangChain 1.x

[tool.poetry]
name = "agentic-ide-backend"
version = "0.1.0"
description = "Agentic IDE Backend - LLM-orchestrated multi-agent code generation"
authors = ["Agentic IDE Team"]
readme = "README.md"
repository = "https://github.com/agentic-ide/backend"

[tool.poetry.dependencies]
python = "^3.12"

# FastAPI & HTTP
fastapi = "*"
uvicorn = "*"
pydantic = "*"
pydantic-settings = "*"

# LangChain 1.x (latest architecture)
langchain = "^1.0.3"
langchain-community = "*"
langchain-openai = "*"
langchain-text-splitters = "*"

# LangGraph (state machine orchestration)
langgraph = "*"

# LLM Integration
# ollama = "^0.6.0"
httpx = "*"

# Vector Database
qdrant-client = "*"
sentence-transformers = "*"

# Embeddings & Reranking
huggingface-hub = "*"
rank-bm25 = "*"

# Git Operations
gitpython = "*"

# Configuration
pyyaml = "*"
python-dotenv = "*"

# Logging & Monitoring
structlog = "*"
python-json-logger = "*"

# Data Validation & Serialization
marshmallow = "*"

# Async & Concurrency
asyncio-contextmanager = "*"
aiofiles = "*"

# Type Checking
typing-extensions = "*"

# Testing (dev dependencies)
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-harvest = "*"
pytest-xdist = "*"
pytest-mock = "*"

# Code Quality
ruff = "*"
black = "*"
isort = "*"
mypy = "*"

# Development Tools
ipython = "*"
ipdb = "*"
debugpy = "*"

[tool.poetry.group.dev.dependencies]
# Already included via testing section above

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = [".venv", "build", "dist"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "qdrant_client.*",
    # "ollama.*",
    "gitpython.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=backend --cov-report=term-missing --cov-report=html -v"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "build", "dist"]
select = [
    "E",   # Errors
    "W",   # Warnings
    "F",   # PyFlakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # Line too long (black handles this)
    "E741",  # Ambiguous variable name
]
