[tool.poetry]
name = "ag2-agent-network"
version = "0.1.0"
description = "AG2 Parallel Agent Network for Multi-Agent Development"
authors = ["Your Organization <dev@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "agent_network"}]

[tool.poetry.dependencies]
python = "^3.11"
ag2 = "^0.9.0"
openai = "^1.0.0"
chromadb = "^0.5.0"
pydantic = "^2.0.0"
pyyaml = "^6.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.0"
numpy = "^1.24.0"
pandas = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
isort = "^5.12.0"

[tool.poetry.scripts]
agent-network = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
