[project]
name = "ai-coding-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "langchain==1.0.3",
  "langchain-community",
  "langchain-core",
  "langchain-ollama",
  "langchain-experimental",
  "langgraph",
  "fastapi",
  "uvicorn",
  "pydantic",
  "pydantic-core",
  "pydantic-settings",
  "langchain-mcp-adapters",
  "python-dotenv",
  "pyyaml",
  "typing-extensions",
  "aiofiles",
  "httpx",
  "starlette"
]
